Fix spacing

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -18,6 +18,7 @@
 
 .menu-divider {
   margin-left: 30px;
+  margin-block: 10px;
 }
 
 .dapp-sidebar-inner {
@@ -48,7 +49,7 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  margin-bottom: 33px;
+  margin-bottom: 10px;
   min-height: max-content;
   .dapp-nav {
     display: flex;
